--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   </div>
 
   <div class="product">
-    <img src="king of chiken.jpg" alt="Identidade Visual" loading="lazy">
+    <img src="king of chiken.jpeg" alt="Identidade Visual" loading="lazy">
     <h2>Identidade Visual</h2>
     <p class="preco">R$ 29,99</p>
     <a class="btn-whatsapp" href="https://wa.me/5594988098876?text=Oi%2C%20amei%20a%20Identidade%20Visual!%20👀" target="_blank">Eu Amei 💗</a>
